// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamedDefinition 1`] = `
{
  "@": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "NamedDefinition",
  "typeTag": {
    "@": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "identifier": {
      "@": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "kind": "TypeIdentifier",
      "value": "number",
    },
    "kind": "TypeTag",
  },
}
`;

exports[`NamedLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 5,
      "line": 1,
      "offset": 4,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "expression": {
    "@": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "start": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
    },
    "kind": "NumberLiteral",
    "value": 5,
  },
  "identifier": {
    "@": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "ValueIdentifier",
    "value": "x",
  },
  "kind": "NamedLiteral",
}
`;

exports[`NamedRecordDefinition 1`] = `
{
  "@": {
    "end": {
      "column": 34,
      "line": 1,
      "offset": 33,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NamedRecordDefinitionStatement",
  "namedRecordDefinition": {
    "@": {
      "end": {
        "column": 34,
        "line": 1,
        "offset": 33,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "identifier": {
      "@": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "kind": "TypeIdentifier",
      "value": "Point",
    },
    "kind": "NamedRecordDefinition",
    "record": {
      "@": {
        "end": {
          "column": 34,
          "line": 1,
          "offset": 33,
        },
        "start": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
      },
      "definitions": [
        {
          "@": {
            "end": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "start": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
            },
            "kind": "ValueIdentifier",
            "value": "x",
          },
          "kind": "NamedDefinition",
          "typeTag": {
            "@": {
              "end": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
              "start": {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
                "start": {
                  "column": 16,
                  "line": 1,
                  "offset": 15,
                },
              },
              "kind": "TypeIdentifier",
              "value": "number",
            },
            "kind": "TypeTag",
          },
        },
        {
          "@": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
          },
          "identifier": {
            "@": {
              "end": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
              "start": {
                "column": 24,
                "line": 1,
                "offset": 23,
              },
            },
            "kind": "ValueIdentifier",
            "value": "y",
          },
          "kind": "NamedDefinition",
          "typeTag": {
            "@": {
              "end": {
                "column": 33,
                "line": 1,
                "offset": 32,
              },
              "start": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 33,
                  "line": 1,
                  "offset": 32,
                },
                "start": {
                  "column": 27,
                  "line": 1,
                  "offset": 26,
                },
              },
              "kind": "TypeIdentifier",
              "value": "number",
            },
            "kind": "TypeTag",
          },
        },
      ],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinition.empty 1`] = `
{
  "@": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NamedRecordDefinitionStatement",
  "namedRecordDefinition": {
    "@": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "identifier": {
      "@": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
      },
      "kind": "TypeIdentifier",
      "value": "True",
    },
    "kind": "NamedRecordDefinition",
    "record": {
      "@": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
      },
      "definitions": [],
      "kind": "RecordDefinition",
    },
  },
}
`;

exports[`NamedRecordDefinitionGroup 1`] = `
{
  "@": {
    "end": {
      "column": 6,
      "line": 6,
      "offset": 91,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "kind": "TypeIdentifier",
    "value": "Card",
  },
  "kind": "NamedRecordDefinitionGroup",
  "namedRecordDefinitions": [
    {
      "@": {
        "end": {
          "column": 13,
          "line": 2,
          "offset": 27,
        },
        "start": {
          "column": 7,
          "line": 2,
          "offset": 21,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 11,
            "line": 2,
            "offset": 25,
          },
          "start": {
            "column": 7,
            "line": 2,
            "offset": 21,
          },
        },
        "kind": "TypeIdentifier",
        "value": "King",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "@": {
          "end": {
            "column": 13,
            "line": 2,
            "offset": 27,
          },
          "start": {
            "column": 11,
            "line": 2,
            "offset": 25,
          },
        },
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "@": {
        "end": {
          "column": 14,
          "line": 3,
          "offset": 42,
        },
        "start": {
          "column": 7,
          "line": 3,
          "offset": 35,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 12,
            "line": 3,
            "offset": 40,
          },
          "start": {
            "column": 7,
            "line": 3,
            "offset": 35,
          },
        },
        "kind": "TypeIdentifier",
        "value": "Queen",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "@": {
          "end": {
            "column": 14,
            "line": 3,
            "offset": 42,
          },
          "start": {
            "column": 12,
            "line": 3,
            "offset": 40,
          },
        },
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "@": {
        "end": {
          "column": 13,
          "line": 4,
          "offset": 56,
        },
        "start": {
          "column": 7,
          "line": 4,
          "offset": 50,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 11,
            "line": 4,
            "offset": 54,
          },
          "start": {
            "column": 7,
            "line": 4,
            "offset": 50,
          },
        },
        "kind": "TypeIdentifier",
        "value": "Jack",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "@": {
          "end": {
            "column": 13,
            "line": 4,
            "offset": 56,
          },
          "start": {
            "column": 11,
            "line": 4,
            "offset": 54,
          },
        },
        "definitions": [],
        "kind": "RecordDefinition",
      },
    },
    {
      "@": {
        "end": {
          "column": 0,
          "line": 6,
          "offset": 85,
        },
        "start": {
          "column": 7,
          "line": 5,
          "offset": 64,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 13,
            "line": 5,
            "offset": 70,
          },
          "start": {
            "column": 7,
            "line": 5,
            "offset": 64,
          },
        },
        "kind": "TypeIdentifier",
        "value": "Number",
      },
      "kind": "NamedRecordDefinition",
      "record": {
        "@": {
          "end": {
            "column": 0,
            "line": 6,
            "offset": 85,
          },
          "start": {
            "column": 13,
            "line": 5,
            "offset": 70,
          },
        },
        "definitions": [
          {
            "@": {
              "end": {
                "column": 27,
                "line": 5,
                "offset": 84,
              },
              "start": {
                "column": 14,
                "line": 5,
                "offset": 71,
              },
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 19,
                  "line": 5,
                  "offset": 76,
                },
                "start": {
                  "column": 14,
                  "line": 5,
                  "offset": 71,
                },
              },
              "kind": "ValueIdentifier",
              "value": "value",
            },
            "kind": "NamedDefinition",
            "typeTag": {
              "@": {
                "end": {
                  "column": 27,
                  "line": 5,
                  "offset": 84,
                },
                "start": {
                  "column": 19,
                  "line": 5,
                  "offset": 76,
                },
              },
              "identifier": {
                "@": {
                  "end": {
                    "column": 27,
                    "line": 5,
                    "offset": 84,
                  },
                  "start": {
                    "column": 21,
                    "line": 5,
                    "offset": 78,
                  },
                },
                "kind": "TypeIdentifier",
                "value": "number",
              },
              "kind": "TypeTag",
            },
          },
        ],
        "kind": "RecordDefinition",
      },
    },
  ],
}
`;

exports[`NamedRecordLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "TypeIdentifier",
    "value": "Point",
  },
  "kind": "NamedRecordLiteral",
  "recordLiteral": {
    "@": {
      "end": {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "start": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "kind": "NumberLiteral",
          "value": 5,
        },
        "identifier": {
          "@": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedLiteral",
      },
      {
        "@": {
          "end": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "kind": "NumberLiteral",
          "value": 3,
        },
        "identifier": {
          "@": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
}
`;

exports[`NamedRecordLiteral.nestedIdentifier 1`] = `
{
  "@": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "identifier": {
    "@": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "kind": "NestedTypeIdentifier",
    "path": [
      {
        "@": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "kind": "TypeIdentifier",
        "value": "Card",
      },
      {
        "@": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "kind": "TypeIdentifier",
        "value": "King",
      },
    ],
  },
  "kind": "NamedRecordLiteral",
  "recordLiteral": {
    "@": {
      "end": {
        "column": 22,
        "line": 1,
        "offset": 21,
      },
      "start": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "definitions": [
      {
        "@": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
            "start": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "kind": "NumberLiteral",
          "value": 5,
        },
        "identifier": {
          "@": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "kind": "ValueIdentifier",
          "value": "x",
        },
        "kind": "NamedLiteral",
      },
      {
        "@": {
          "end": {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "start": {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
        },
        "expression": {
          "@": {
            "end": {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
            "start": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
          },
          "kind": "NumberLiteral",
          "value": 3,
        },
        "identifier": {
          "@": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
          },
          "kind": "ValueIdentifier",
          "value": "y",
        },
        "kind": "NamedLiteral",
      },
    ],
    "kind": "RecordLiteral",
  },
}
`;

exports[`NestedTypeIdentifier 1`] = `
{
  "@": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NestedTypeIdentifier",
  "path": [
    {
      "@": {
        "end": {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "kind": "TypeIdentifier",
      "value": "Card",
    },
    {
      "@": {
        "end": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "kind": "TypeIdentifier",
      "value": "King",
    },
  ],
}
`;

exports[`RecordDefinition 1`] = `
{
  "@": {
    "end": {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "definitions": [
    {
      "@": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "NamedDefinition",
      "typeTag": {
        "@": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "kind": "TypeIdentifier",
          "value": "number",
        },
        "kind": "TypeTag",
      },
    },
    {
      "@": {
        "end": {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "start": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "kind": "ValueIdentifier",
        "value": "y",
      },
      "kind": "NamedDefinition",
      "typeTag": {
        "@": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
        },
        "identifier": {
          "@": {
            "end": {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
            "start": {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
          },
          "kind": "TypeIdentifier",
          "value": "number",
        },
        "kind": "TypeTag",
      },
    },
  ],
  "kind": "RecordDefinition",
}
`;

exports[`RecordLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "definitions": [
    {
      "@": {
        "end": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "kind": "NumberLiteral",
        "value": 5,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "x",
      },
      "kind": "NamedLiteral",
    },
    {
      "@": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "kind": "ValueIdentifier",
        "value": "y",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "RecordLiteral",
}
`;

exports[`RecordLiteral.long 1`] = `
{
  "@": {
    "end": {
      "column": 4,
      "line": 9,
      "offset": 109,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "definitions": [
    {
      "@": {
        "end": {
          "column": 11,
          "line": 2,
          "offset": 12,
        },
        "start": {
          "column": 5,
          "line": 2,
          "offset": 6,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 11,
            "line": 2,
            "offset": 12,
          },
          "start": {
            "column": 10,
            "line": 2,
            "offset": 11,
          },
        },
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 8,
            "line": 2,
            "offset": 9,
          },
          "start": {
            "column": 5,
            "line": 2,
            "offset": 6,
          },
        },
        "kind": "ValueIdentifier",
        "value": "num",
      },
      "kind": "NamedLiteral",
    },
    {
      "@": {
        "end": {
          "column": 0,
          "line": 9,
          "offset": 105,
        },
        "start": {
          "column": 5,
          "line": 3,
          "offset": 18,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 0,
            "line": 9,
            "offset": 105,
          },
          "start": {
            "column": 10,
            "line": 3,
            "offset": 23,
          },
        },
        "definitions": [
          {
            "@": {
              "end": {
                "column": 13,
                "line": 4,
                "offset": 37,
              },
              "start": {
                "column": 7,
                "line": 4,
                "offset": 31,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 13,
                  "line": 4,
                  "offset": 37,
                },
                "start": {
                  "column": 12,
                  "line": 4,
                  "offset": 36,
                },
              },
              "kind": "NumberLiteral",
              "value": 2,
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 10,
                  "line": 4,
                  "offset": 34,
                },
                "start": {
                  "column": 7,
                  "line": 4,
                  "offset": 31,
                },
              },
              "kind": "ValueIdentifier",
              "value": "num",
            },
            "kind": "NamedLiteral",
          },
          {
            "@": {
              "end": {
                "column": 18,
                "line": 5,
                "offset": 56,
              },
              "start": {
                "column": 7,
                "line": 5,
                "offset": 45,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 18,
                  "line": 5,
                  "offset": 56,
                },
                "start": {
                  "column": 12,
                  "line": 5,
                  "offset": 50,
                },
              },
              "kind": "StringLiteral",
              "value": "this",
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 10,
                  "line": 5,
                  "offset": 48,
                },
                "start": {
                  "column": 7,
                  "line": 5,
                  "offset": 45,
                },
              },
              "kind": "ValueIdentifier",
              "value": "str",
            },
            "kind": "NamedLiteral",
          },
          {
            "@": {
              "end": {
                "column": 17,
                "line": 6,
                "offset": 74,
              },
              "start": {
                "column": 7,
                "line": 6,
                "offset": 64,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 17,
                  "line": 6,
                  "offset": 74,
                },
                "start": {
                  "column": 13,
                  "line": 6,
                  "offset": 70,
                },
              },
              "kind": "BooleanLiteral",
              "value": true,
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 11,
                  "line": 6,
                  "offset": 68,
                },
                "start": {
                  "column": 7,
                  "line": 6,
                  "offset": 64,
                },
              },
              "kind": "ValueIdentifier",
              "value": "bool",
            },
            "kind": "NamedLiteral",
          },
          {
            "@": {
              "end": {
                "column": 0,
                "line": 8,
                "offset": 99,
              },
              "start": {
                "column": 7,
                "line": 7,
                "offset": 82,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 0,
                  "line": 8,
                  "offset": 99,
                },
                "start": {
                  "column": 12,
                  "line": 7,
                  "offset": 87,
                },
              },
              "definitions": [
                {
                  "@": {
                    "end": {
                      "column": 17,
                      "line": 7,
                      "offset": 92,
                    },
                    "start": {
                      "column": 13,
                      "line": 7,
                      "offset": 88,
                    },
                  },
                  "expression": {
                    "@": {
                      "end": {
                        "column": 17,
                        "line": 7,
                        "offset": 92,
                      },
                      "start": {
                        "column": 16,
                        "line": 7,
                        "offset": 91,
                      },
                    },
                    "kind": "NumberLiteral",
                    "value": 3,
                  },
                  "identifier": {
                    "@": {
                      "end": {
                        "column": 14,
                        "line": 7,
                        "offset": 89,
                      },
                      "start": {
                        "column": 13,
                        "line": 7,
                        "offset": 88,
                      },
                    },
                    "kind": "ValueIdentifier",
                    "value": "x",
                  },
                  "kind": "NamedLiteral",
                },
                {
                  "@": {
                    "end": {
                      "column": 23,
                      "line": 7,
                      "offset": 98,
                    },
                    "start": {
                      "column": 19,
                      "line": 7,
                      "offset": 94,
                    },
                  },
                  "expression": {
                    "@": {
                      "end": {
                        "column": 23,
                        "line": 7,
                        "offset": 98,
                      },
                      "start": {
                        "column": 22,
                        "line": 7,
                        "offset": 97,
                      },
                    },
                    "kind": "NumberLiteral",
                    "value": 3,
                  },
                  "identifier": {
                    "@": {
                      "end": {
                        "column": 20,
                        "line": 7,
                        "offset": 95,
                      },
                      "start": {
                        "column": 19,
                        "line": 7,
                        "offset": 94,
                      },
                    },
                    "kind": "ValueIdentifier",
                    "value": "y",
                  },
                  "kind": "NamedLiteral",
                },
              ],
              "kind": "RecordLiteral",
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 10,
                  "line": 7,
                  "offset": 85,
                },
                "start": {
                  "column": 7,
                  "line": 7,
                  "offset": 82,
                },
              },
              "kind": "ValueIdentifier",
              "value": "rec",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "RecordLiteral",
      },
      "identifier": {
        "@": {
          "end": {
            "column": 8,
            "line": 3,
            "offset": 21,
          },
          "start": {
            "column": 5,
            "line": 3,
            "offset": 18,
          },
        },
        "kind": "ValueIdentifier",
        "value": "rec",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "RecordLiteral",
}
`;
